# my_react_wasm

./: README.md  package-lock.json  package.json
my_wasm/: Cargo.toml
my_wasm/src/: lib.rs  test_main.rs
src/: App.tsx  index.css
